--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
-image: alpine:latest
+image: ubuntu:latest
 
 stages:
   - build
 
 before_script:
-  - chmod 777 cpwrapper
+  - chmod +x cpwrapper
 
 build:
   stage: build
