ci: use ShulkerRDK as CI provider

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,11 +4,11 @@ stages:
   - build
 
 before_script:
-  - chmod +x cpwrapper
+  - chmod +x srdk
 build:
   stage: build
   script:
-    ./cpwrapper build
+    ./srdk build
   artifacts:
     paths:
       - build/
